--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jscoverage": "^0.5.9",
     "jsdoc": "^3.3.0",
     "jshint": "^2.8.0",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "mocha-lcov-reporter": "0.0.2"
   },
   "dependencies": {
     "underscore": "^1.8.3"
